fix: fixed element alignment

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -20,29 +20,43 @@ header {
 .header-menu {
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .header-menu__list {
-    list-style: none;
     display: flex;
-    gap: 25px;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    position: relative;
 }
 
 .header-menu__item {
-    font-size: 1rem;
+    flex: 1;
+    text-align: center;
+    min-width: 150px;
+}
+
+.header-menu__list::before,
+.header-menu__list::after {
+    content: '';
+    flex: 1;
 }
 
 .header-menu__link {
-    color: #060708;
+    display: block;
+    padding: 10px;
     text-decoration: none;
-    padding: 5px 10px;
+    color: #060708;
     border-radius: 6px;
+    background-color: #f6f8fa;
+    white-space: nowrap;
 }
 
 .header-menu__link:hover {
     background-color: #e1e4e8;
-    text-decoration: none;
-    /* color: #0366d6; */
 }
 
 .header-menu__link.current {
@@ -51,7 +65,6 @@ header {
     border-radius: 0;
     border-bottom: 1px solid #0366d6;
     padding-bottom: 15px;
-
 }
 
 main {
@@ -160,7 +173,6 @@ fieldset {
     flex-direction: column;
     gap: 10px;
     position: relative;
-    border: 1px solid #e1e4e8;
     padding: 20px;
     border-radius: 6px;
     border: none;
@@ -171,7 +183,7 @@ legend {
     font-weight: bold;
     padding: 0 10px;
     border: none;
-    padding-inline-start: 0px;
+    padding-inline-start: 0;
 }
 
 .score-container {
@@ -209,10 +221,6 @@ legend {
 .score-header {
     font-weight: bold;
     color: #24292e;
-}
-
-.hidden {
-    display: none !important;
 }
 
 .score-button-container {
@@ -327,11 +335,12 @@ legend {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     margin-top: 20px;
 }
 
 .pagination-link {
+    flex-shrink: 0;
     padding: 8px 16px;
     background-color: #28a745;
     color: white;
@@ -346,8 +355,14 @@ legend {
 }
 
 .pagination-info {
+    text-align: center;
+    min-width: 150px;
     font-size: 1.2rem;
     color: #333;
+}
+
+.pagination-link.hidden {
+    visibility: hidden;
 }
 
 .pagination-link:hover {
